--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
   <p>this is text</p>
 </head>
   <body>
-    <p style="font-size: 24px;"><b>hello guys !!!</b></p>
+    <p style="font-size: 24px;"><b>b></p>
   </body>
+<head>
+  <style>
+    h1 {
+      font-size: 40px;
+    }
+    .custom-text {
+      font-size: 18px;
+    }
+  </style>
+</head>
+<body>
+  <h1>hello guys !!!</</h1>
+  <p class="custom-text">hello.</p>
+</body>
 </html>
