--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     .custom-text {
       font-size: 18px;
       color: #333;
+      font-family: Arial, sans-serif;
     }
     .big-bold {
       font-size: 24px;
       font-weight: bold;
+      font-family: Arial, sans-serif;
     }
   </style>
 </head>
