--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
 <head>
   <style>
-    h1 {
-      font-size: 40px;
+    body {
       font-family: Arial, sans-serif;
     }
+
+    h1 {
+      font-size: 40px;
+    }
+
     .custom-text {
       font-size: 18px;
       color: #333;
-      font-family: Arial, sans-serif;
     }
+
     .big-bold {
       font-size: 24px;
       font-weight: bold;
-      font-family: Arial, sans-serif;
     }
   </style>
 </head>
