--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <style>
+    html {background-color: black}
     body {
-      background-color: powderblue;
       font-family: Arial, sans-serif;
     }
 
